        Reviewed by Xan Lopez.

Build the new API test.

        [GTK] REGRESSION: webkit thinks it can render PDFs
        https://bugs.webkit.org/show_bug.cgi?id=32183

        * GNUmakefile.am:

WebCore

        Reviewed by Xan Lopez.

        Turn the MediaPlayer supported types blacklist into a whitelist

        [GTK] REGRESSION: webkit thinks it can render PDFs
        https://bugs.webkit.org/show_bug.cgi?id=32183

        Covered by API test.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache):

WebKit/gtk

        Reviewed by Xan Lopez.

        New test to make sure we do not regress this feature anymore. All
        test files were created by me.

        [GTK] REGRESSION: webkit thinks it can render PDFs
        https://bugs.webkit.org/show_bug.cgi?id=32183

        * tests/resources/test.html: Added.
        * tests/resources/test.ogg: Added.
        * tests/resources/test.pdf: Added.
        * tests/resources/test.txt: Added.
        * tests/testmimehandling.c: Added.
        (server_callback):
        (idle_quit_loop_cb):
        (mime_type_policy_decision_requested_cb):
        (test_mime_type):
        (test_mime_pdf):
        (test_mime_html):
        (test_mime_text):
        (test_mime_ogg):
        (main):

Canonical link: https://commits.webkit.org/43191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51764 268f45cc-cd09-0410-ab3c-d52691b4dbfc